src/parser/CmmParser.java
// Generated from C:/Users/anaes/OneDrive/Escritorio/labDLP/src/parser\Cmm.g4 by ANTLR 4.9.1
package parser;

    import ast.*;
    import ast.definitions.*;
    import ast.expressions.*;
    import ast.statements.*;
    import ast.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, INT_CONSTANT=37, ID=38, 
		REAL_CONSTANT=39, ONELINE_COMMENT=40, MULTIPLELINE_COMMENT=41, CHAR_CONSTANT=42, 
		BLANKS=43;
	public static final int
		RULE_program = 0, RULE_variable_definitions = 1, RULE_definitions = 2, 
		RULE_function_definitions = 3, RULE_built_in_type = 4, RULE_type = 5, 
		RULE_record_block = 6, RULE_record_field = 7, RULE_main = 8, RULE_statement = 9, 
		RULE_expression = 10, RULE_function_invocation = 11, RULE_args = 12, RULE_parameter_type = 13, 
		RULE_block = 14, RULE_parameter = 15, RULE_parameters = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "variable_definitions", "definitions", "function_definitions", 
			"built_in_type", "type", "record_block", "record_field", "main", "statement", 
			"expression", "function_invocation", "args", "parameter_type", "block", 
			"parameter", "parameters"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "';'", "'('", "')'", "'int'", "'double'", "'char'", "'['", 
			"']'", "'struct'", "'{'", "'}'", "'void'", "'main'", "'write'", "'read'", 
			"'return'", "'='", "'if'", "'else'", "'while'", "'.'", "'-'", "'*'", 
			"'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'!'", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "INT_CONSTANT", "ID", "REAL_CONSTANT", "ONELINE_COMMENT", "MULTIPLELINE_COMMENT", 
			"CHAR_CONSTANT", "BLANKS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext definitions;
		public MainContext main;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			((ProgramContext)_localctx).definitions = definitions();
			setState(35);
			((ProgramContext)_localctx).main = main();
			((ProgramContext)_localctx).ast =  new Program( (((ProgramContext)_localctx).definitions!=null?(((ProgramContext)_localctx).definitions.start):null).getLine(), (((ProgramContext)_localctx).definitions!=null?(((ProgramContext)_localctx).definitions.start):null).getCharPositionInLine()+1, ((ProgramContext)_localctx).definitions.ast, ((ProgramContext)_localctx).main.ast);
			setState(37);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_definitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public TypeContext t;
		public Token ID;
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Variable_definitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_definitions; }
	}

	public final Variable_definitionsContext variable_definitions() throws RecognitionException {
		Variable_definitionsContext _localctx = new Variable_definitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variable_definitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			((Variable_definitionsContext)_localctx).t = type(0);
			setState(40);
			((Variable_definitionsContext)_localctx).ID = match(ID);
			_localctx.ast.add(new VarDefinition((((Variable_definitionsContext)_localctx).t!=null?(((Variable_definitionsContext)_localctx).t.start):null).getLine(), (((Variable_definitionsContext)_localctx).t!=null?(((Variable_definitionsContext)_localctx).t.start):null).getCharPositionInLine() +1, ((Variable_definitionsContext)_localctx).t.ast, (((Variable_definitionsContext)_localctx).ID!=null?((Variable_definitionsContext)_localctx).ID.getText():null)));
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(42);
				match(T__0);
				setState(43);
				((Variable_definitionsContext)_localctx).ID = match(ID);
				_localctx.ast.add(new VarDefinition((((Variable_definitionsContext)_localctx).t!=null?(((Variable_definitionsContext)_localctx).t.start):null).getLine(), (((Variable_definitionsContext)_localctx).t!=null?(((Variable_definitionsContext)_localctx).t.start):null).getCharPositionInLine() +1, ((Variable_definitionsContext)_localctx).t.ast, (((Variable_definitionsContext)_localctx).ID!=null?((Variable_definitionsContext)_localctx).ID.getText():null)));
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Variable_definitionsContext v;
		public Function_definitionsContext f;
		public List<Variable_definitionsContext> variable_definitions() {
			return getRuleContexts(Variable_definitionsContext.class);
		}
		public Variable_definitionsContext variable_definitions(int i) {
			return getRuleContext(Variable_definitionsContext.class,i);
		}
		public List<Function_definitionsContext> function_definitions() {
			return getRuleContexts(Function_definitionsContext.class);
		}
		public Function_definitionsContext function_definitions(int i) {
			return getRuleContext(Function_definitionsContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(58);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						setState(52);
						((DefinitionsContext)_localctx).v = variable_definitions();
						_localctx.ast.addAll(((DefinitionsContext)_localctx).v.ast);
						}
						break;
					case 2:
						{
						setState(55);
						((DefinitionsContext)_localctx).f = function_definitions();
						_localctx.ast.addAll(((DefinitionsContext)_localctx).f.ast);
						}
						break;
					}
					} 
				}
				setState(62);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Parameter_typeContext returnType;
		public Token ID;
		public ParametersContext parameters;
		public BlockContext body;
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Parameter_typeContext parameter_type() {
			return getRuleContext(Parameter_typeContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Function_definitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definitions; }
	}

	public final Function_definitionsContext function_definitions() throws RecognitionException {
		Function_definitionsContext _localctx = new Function_definitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_definitions);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((Function_definitionsContext)_localctx).returnType = parameter_type();
			setState(64);
			((Function_definitionsContext)_localctx).ID = match(ID);
			setState(65);
			match(T__2);
			setState(66);
			((Function_definitionsContext)_localctx).parameters = parameters();
			setState(67);
			match(T__3);
			setState(68);
			((Function_definitionsContext)_localctx).body = block();
			_localctx.ast.add(new FunctionDefinition((((Function_definitionsContext)_localctx).returnType!=null?(((Function_definitionsContext)_localctx).returnType.start):null).getLine(), (((Function_definitionsContext)_localctx).returnType!=null?(((Function_definitionsContext)_localctx).returnType.start):null).getCharPositionInLine()+1,
			                           (((Function_definitionsContext)_localctx).ID!=null?((Function_definitionsContext)_localctx).ID.getText():null),new FunctionType((((Function_definitionsContext)_localctx).returnType!=null?(((Function_definitionsContext)_localctx).returnType.start):null).getLine(), (((Function_definitionsContext)_localctx).returnType!=null?(((Function_definitionsContext)_localctx).returnType.start):null).getCharPositionInLine()+1,
			                           ((Function_definitionsContext)_localctx).parameters.ast, ((Function_definitionsContext)_localctx).returnType.ast), ((Function_definitionsContext)_localctx).body.ast));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Built_in_typeContext extends ParserRuleContext {
		public Type ast;
		public Token i1;
		public Token d1;
		public Token c1;
		public Built_in_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_built_in_type; }
	}

	public final Built_in_typeContext built_in_type() throws RecognitionException {
		Built_in_typeContext _localctx = new Built_in_typeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_built_in_type);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				((Built_in_typeContext)_localctx).i1 = match(T__4);
				((Built_in_typeContext)_localctx).ast =  new IntType(((Built_in_typeContext)_localctx).i1.getLine(), ((Built_in_typeContext)_localctx).i1.getCharPositionInLine()+1);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				((Built_in_typeContext)_localctx).d1 = match(T__5);
				((Built_in_typeContext)_localctx).ast =  new DoubleType(((Built_in_typeContext)_localctx).d1.getLine(), ((Built_in_typeContext)_localctx).d1.getCharPositionInLine()+1);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				((Built_in_typeContext)_localctx).c1 = match(T__6);
				((Built_in_typeContext)_localctx).ast =  new CharType(((Built_in_typeContext)_localctx).c1.getLine(), ((Built_in_typeContext)_localctx).c1.getCharPositionInLine()+1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext t1;
		public Built_in_typeContext p;
		public Record_blockContext r;
		public Token i;
		public Built_in_typeContext built_in_type() {
			return getRuleContext(Built_in_typeContext.class,0);
		}
		public Record_blockContext record_block() {
			return getRuleContext(Record_blockContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(CmmParser.INT_CONSTANT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
			case T__5:
			case T__6:
				{
				setState(80);
				((TypeContext)_localctx).p = built_in_type();
				((TypeContext)_localctx).ast =  ((TypeContext)_localctx).p.ast;
				}
				break;
			case T__9:
				{
				setState(83);
				match(T__9);
				setState(84);
				((TypeContext)_localctx).r = record_block();
				((TypeContext)_localctx).ast =  new StructType((((TypeContext)_localctx).r!=null?(((TypeContext)_localctx).r.start):null).getLine(), (((TypeContext)_localctx).r!=null?(((TypeContext)_localctx).r.start):null).getCharPositionInLine()+1, ((TypeContext)_localctx).r.ast);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					_localctx.t1 = _prevctx;
					_localctx.t1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(89);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(90);
					match(T__7);
					setState(91);
					((TypeContext)_localctx).i = match(INT_CONSTANT);
					setState(92);
					match(T__8);
					((TypeContext)_localctx).ast =  new ArrayType(((TypeContext)_localctx).i.getLine() , ((TypeContext)_localctx).i.getCharPositionInLine()+1, LexerHelper.lexemeToInt((((TypeContext)_localctx).i!=null?((TypeContext)_localctx).i.getText():null)), ((TypeContext)_localctx).t1.ast );
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Record_blockContext extends ParserRuleContext {
		public List<StructField> ast = new ArrayList<StructField>();
		public Record_fieldContext r;
		public List<Record_fieldContext> record_field() {
			return getRuleContexts(Record_fieldContext.class);
		}
		public Record_fieldContext record_field(int i) {
			return getRuleContext(Record_fieldContext.class,i);
		}
		public Record_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_block; }
	}

	public final Record_blockContext record_block() throws RecognitionException {
		Record_blockContext _localctx = new Record_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_record_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(T__10);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__9))) != 0)) {
				{
				{
				setState(100);
				((Record_blockContext)_localctx).r = record_field();
				_localctx.ast.addAll(((Record_blockContext)_localctx).r.ast);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Record_fieldContext extends ParserRuleContext {
		public List<StructField> ast = new ArrayList<StructField>();
		public TypeContext t;
		public Token ID;
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Record_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_field; }
	}
